--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "semantic-ui-react": "^0.88.1",
+    "styled-components": "^4.3.2",
     "yup": "^0.27.0"
   },
   "scripts": {
